@@ -5,15 +5,6 @@ from django.db import migrations, models
 import djongo.models.fields
 
 
-def set_default_apex_timestamps(apps, schema_editor):
-    frontend_model = apps.get_model("services", "frontend")
-    db_alias = schema_editor.connection.alias
-    frontends = frontend_model.objects.using(db_alias)
-
-    for frontend in frontends.all():
-        frontend.apex_timestamp = dict()
-        frontend.save()
-
 class Migration(migrations.Migration):
 
     dependencies = [
@@ -39,9 +30,8 @@ class Migration(migrations.Migration):
         migrations.AddField(
             model_name='frontend',
             name='apex_timestamp',
-            field=djongo.models.fields.JSONField(default={}),
+            field=djongo.models.fields.JSONField(default=dict),
         ),
-        migrations.RunPython(set_default_apex_timestamps, migrations.RunPython.noop),
         migrations.AddField(
             model_name='frontend',
             name='custom_tl_frame_delimiter',
