@@ -16,6 +16,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 - [AUTHENTICATION] [GUI] LDAP Users can now authenticate once activated
 - [NETWORK] Correctly assign a new/changed IPv6 IP to an existing interface
+- [FRONTEND] JSONField default value
 
 
 ## [2.15.4] - 2024-05-27
